// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInformations /> should render 1`] = `
.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

<div>
  <h2
    class="c0"
  >
    Statut du salarié
  </h2>
</div>
`;

exports[`<StepInformations /> should render catégorie 1`] = `
.c5 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
}

.c3 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
  all: revert;
  margin: 0;
}

.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c9 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c8 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c8 *::-ms-backdrop,
.c8 {
  padding-right: 1.6rem;
}

.c8:invalid {
  border-color: #eb5757;
}

.c8:disabled {
  background-color: #e4e8ef;
}

.c2 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c4 {
  font-weight: 600 !important;
}

.c7 {
  width: 40rem;
}

.c1 {
  margin-bottom: 3.2rem;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

@media (max-width:600px) {
  .c6 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    width: 100%;
  }
}

<div>
  <h2
    class="c0"
  >
    Statut du salarié
  </h2>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-criteria.catégorie professionnelle"
    >
      <p
        class="c3 c4"
      >
        Quelle est la catégorie professionnelle du salarié ?
         
        <span
          class="c5"
        >
           (obligatoire)
        </span>
      </p>
    </label>
    <div
      class="c6 c7"
    >
      <select
        class="c8"
        id="input-criteria.catégorie professionnelle"
        name="criteria.catégorie professionnelle"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="42| Collaborateurs"
        >
          Collaborateurs
        </option>
        <option
          value="48| Cadres"
        >
          Cadres
        </option>
      </select>
      <div
        aria-hidden="true"
        class="c9"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#arrow-down_svg__clip0)"
          >
            <path
              d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__clip0"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepInformations /> should render coefficient 1`] = `
.c5 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
}

.c3 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
  all: revert;
  margin: 0;
}

.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c9 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c8 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c8 *::-ms-backdrop,
.c8 {
  padding-right: 1.6rem;
}

.c8:invalid {
  border-color: #eb5757;
}

.c8:disabled {
  background-color: #e4e8ef;
}

.c2 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c4 {
  font-weight: 600 !important;
}

.c7 {
  width: 40rem;
}

.c1 {
  margin-bottom: 3.2rem;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

@media (max-width:600px) {
  .c6 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    width: 100%;
  }
}

<div>
  <h2
    class="c0"
  >
    Statut du salarié
  </h2>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-criteria.catégorie professionnelle"
    >
      <p
        class="c3 c4"
      >
        Quelle est la catégorie professionnelle du salarié ?
         
        <span
          class="c5"
        >
           (obligatoire)
        </span>
      </p>
    </label>
    <div
      class="c6 c7"
    >
      <select
        class="c8"
        id="input-criteria.catégorie professionnelle"
        name="criteria.catégorie professionnelle"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="42| Collaborateurs"
        >
          Collaborateurs
        </option>
        <option
          value="48| Cadres"
        >
          Cadres
        </option>
      </select>
      <div
        aria-hidden="true"
        class="c9"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#arrow-down_svg__clip0)"
          >
            <path
              d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__clip0"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-criteria.coefficient"
    >
      <p
        class="c3 c4"
      >
        Quel est le coefficient hiérarchique du salarié ?
         
        <span
          class="c5"
        >
           (obligatoire)
        </span>
      </p>
    </label>
    <div
      class="c6 c7"
    >
      <select
        class="c8"
        id="input-criteria.coefficient"
        name="criteria.coefficient"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="24| 700 à 750"
        >
          700 à 750
        </option>
        <option
          value="28| 800 à 830 inclus"
        >
          800 à 830 inclus
        </option>
      </select>
      <div
        aria-hidden="true"
        class="c9"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#arrow-down_svg__clip0)"
          >
            <path
              d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__clip0"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</div>
`;
